--- a/Pagination/styles.css
+++ b/Pagination/styles.css
@@ -1,85 +1,151 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    margin: 0;
-    padding: 20px;
-  }
-  
-  #policy-list {
-    max-width: 1080px;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #f8f8f8;
+  background-image: linear-gradient(to left, #85beea, #ffffff);
+  margin: 0;
+  padding: 20px;
+}
 
-  th{
-    font-size: 12px;
-  }
-  
-  th, td {
-    padding: 12px 15px;
-    border-bottom: 1px solid #ddd;
-    text-align: center;
-    
-  }
-  
-  thead {
-    background-color: #f2f2f2;
-  }
-  
-  th {
-    font-weight: bold;
-  }
-  
-  #pagination {
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  #pagination a {
-    padding: 10px 15px;
-    background-color: #ddd;
-    border: 1px solid #bbb;
-    color: #333;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 4px;
-    margin-right: 6px;
-    transition: background-color 0.3s ease;
-  }
-  
-  #pagination a:hover {
-    background-color: #bbb;
-  }
-  
-  #prev-link {
-    display: inline-block;
-  }
-  
-  #next-link {
-    display: inline-block;
-  }
-  
-  #prev-link:before,
-  #next-link:after {
-    
-    display: inline-block;
-    vertical-align: middle;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-right: 5px solid #333;
-    margin-right: 5px;
-  }
-  
+header {
+  width: 100%;
+  height: 120px;
+  padding: 10px;
+  flex-direction: row;
+}
 
+.logo {
+  float: left;
+}
 
-  
+.header-component {
+  float: left;
+  width: fit-content;
+  flex-direction: column;
+  justify-content: flex-start;
+  display: flex;
+}
 
+.header-text {
+  float: left;
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: -28px;
+}
+
+.header-text-small {
+  float: left;
+  font-size: 9px;
+  font-weight: 200;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 20px;
+}
+
+.header-text-right {
+  float: left;
+  font-size: 12px;
+  font-weight: 200;
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header-text-right-2 {
+  float: left;
+  font-size: 12px;
+  font-weight: 200;
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 7px;
+}
+
+.right-component {
+  float: right;
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.right-component-2 {
+  float: right;
+  width: fit-content;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+}
+
+#policy-list {
+  max-width: 1080px;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+th {
+  font-size: 12px;
+}
+
+th,
+td {
+  padding: 12px 15px;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
+
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+th {
+  font-weight: bold;
+}
+
+#pagination {
+  margin-top: 20px;
+  text-align: center;
+}
+
+#pagination a {
+  padding: 10px 15px;
+  background-color: #ddd;
+  border: 1px solid #bbb;
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: 6px;
+  transition: background-color 0.3s ease;
+}
+
+#pagination a:hover {
+  background-color: #bbb;
+}
+
+#prev-link {
+  display: inline-block;
+}
+
+#next-link {
+  display: inline-block;
+}
+
+#prev-link:before,
+#next-link:after {
+
+  display: inline-block;
+  vertical-align: middle;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-right: 5px solid #333;
+  margin-right: 5px;
+}
